# xplan

./: .gitignore  README.md  docker-compose.yml  run.sh
backend-axum/: Cargo.toml  README.md  config.toml
backend-axum/src/: config.rs  database.rs  main.rs
backend-axum/src/router/: employee.rs  index.rs  mod.rs  user.rs
backend-fiber/: README.md  config.toml  go.mod  go.sum  main.go  router.go  server.go
backend-fiber/config/: config.go
backend-fiber/database/: database.go
backend-fiber/router/: common.go  employee.go  index.go  user.go
backend-koa/: README.md  app.js  app.mjs  controller.mjs  package.json  pnpm-lock.yaml  router.js
backend-koa/config/: default.json
backend-koa/controller/: index.mjs  user.mjs
backend-koa/router/: index.js  user.js
db/: schema.sql
