[package]
name = "backend-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
bcrypt = "0.17"
chrono = "0.4"
num_cpus = "1.16"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "mysql"] }
structopt = "0.3"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
