[package]
name = "backend-axum"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "symbols"

[dependencies]
axum = "0.8"
bcrypt = "0.17"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "chrono", "mysql"] }
structopt = "0.3"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
